<resources>
    <string name="app_name">Gah</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_horario">Horários</string>
    <string name="title_servico">Serviços</string>
    <string name="title_cliente">Clientes</string>
    <string name="title_relatorio">Relatórios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_acc">Crie sua conta agora!</string>
</resources>
